syntax = 'proto3';

message S2C_MatchFoundNotification {
    uint32 score = 1;
	map<string, UserData> data = 2;
	message UserData {
        repeated Coords monsterPath = 1;
        repeated Coords initialTowerCoords = 2;
        Coords basePosition = 3;
        message Coords {
            float x = 1;
            float y = 2;
        }
	}
}

message S2C_TowerPurchaseNotification {
    float x = 1;
    float y = 2;
}

message S2C_TowerAttackNotification {
    uint32 towerIndex = 1;
    uint32 monsterIndex = 2;
}

message S2C_MonsterSpawnNotification {
    uint32 monsterNumber = 1;
}

message S2C_MonsterKillNotification {

}

message S2C_GameOverNotification {

}

message NotificationPacket {
    uint64 timestamp = 1;
    string message = 2;
    oneof payload {
        S2C_MatchFoundNotification matchFoundNotification = 3;
        S2C_TowerPurchaseNotification towerPurchaseNotification = 4;
        S2C_TowerAttackNotification towerAttackNotification = 5;
        S2C_MonsterSpawnNotification monsterSpawnNotification = 6;
        S2C_MonsterKillNotification monsterKillNotification = 7;
        S2C_GameOverNotification gameOverNotification = 8;
    }
}